--- a/two/index.html
+++ b/two/index.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPIDEY-WEBS(HOME)</title>
+    <!-- Lumora Analytics -->
+<script>
+window.lumora=window.lumora||function(){(lumora.q=lumora.q||[]).push(arguments)};
+lumora('init', 'site_68e431baa8cb2', 'la_c23c8ffccefefb3b95b932a1480d6781');
+lumora('track', 'pageview');
+</script>
+<script async src='https://demodash.ct.ws/api.php?action=tracker'></script>
 </head>
 
 <body>
@@ -155,5 +162,6 @@
     </footer>
     <script src="source.js"></script>
 </body>
+
 
 </html>
